# speakd

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  io.github.wchest.Speakd.json  meson.build  test_audio.js
.github/workflows/: ci.yml
data/: io.github.wchest.Speakd.desktop.in  io.github.wchest.Speakd.gschema.xml  io.github.wchest.Speakd.metainfo.xml.in  io.github.wchest.Vox.desktop.in  io.github.wchest.Vox.gschema.xml  io.github.wchest.Vox.metainfo.xml.in  meson.build
docs/: speakd-planning-guide.md  vox-claude-code-quickstart.md  vox-planning-guide.md
src/: application.js  main.js  meson.build  preferences.js  window.js
src/services/: audioService.js  deepgramService.js  globalShortcutService.js  outputService.js  settingsService.js  typingPortalService.js  usageService.js
